--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "game server for hearthstone",
   "main": "index.js",
   "scripts": {
-    "test": "node example/index.js --harmony"
+    "test": "node node_modules/babel-cli/bin/babel-node.js example/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0"
   }
 }
