--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/postor/hearthstone-gameserver#readme",
   "dependencies": {
+    "@types/node": "^8.0.31",
     "lodash": "^4.17.4",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "typescript": "^2.5.2"
   }
 }
