--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/postor/hearthstone-gameserver.git"
   },
-  "author": "",
+  "author": "postor@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/postor/hearthstone-gameserver/issues"
