--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "types": [
+            "node"
+        ],
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
